--- a/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Twenty Ten 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2022-04-25 15:13+0300\n"
-"PO-Revision-Date: 2022-10-13 11:29+0500\n"
+"PO-Revision-Date: 2022-10-21 12:48+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE\n"
@@ -413,18 +413,18 @@ msgstr "ONLYOFFICE-Konnektoren"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:114
 #: wp-content/themes/teamlab-blog-2-0/header.php:186
-msgid "ONLYOFFICE for desktop"
+msgid "For desktop"
 msgstr "Desktop Editoren"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:117
 #: wp-content/themes/teamlab-blog-2-0/header.php:187
-msgid "ONLYOFFICE for iOS"
-msgstr "ONLYOFFICE für iOS"
+msgid "For iOS"
+msgstr "Für iOS"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:120
 #: wp-content/themes/teamlab-blog-2-0/header.php:188
-msgid "ONLYOFFICE for Android"
-msgstr "ONLYOFFICE für Android"
+msgid "For Android"
+msgstr "Für Android"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:123
 msgid "ONLYOFFICE Groups"
@@ -1043,9 +1043,6 @@ msgstr "FUNKTIONEN"
 
 #~ msgid "ONLYOFFICE joins the Linux Foundation as a silver member"
 #~ msgstr "ONLYOFFICE ist Silbermitglied von Linux Foundation geworden"
-
-#~ msgid "follow us on:"
-#~ msgstr "Folgen Sie uns auf:"
 
 #~ msgid "Meet ONLYOFFICE Private Rooms where every symbol you type is encrypted <span class=\"nowrap\">end-to-end</span>"
 #~ msgstr "Entdecken Sie die ONLYOFFICE Privaträume, in denen jedes Symbol durch Ende-zu-<span class=\"nowrap\">Ende-Verschlüsselung geschützt ist</span>"
