--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Twenty Ten 1.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/twentyten\n"
 "POT-Creation-Date: 2022-04-25 15:15+0300\n"
-"PO-Revision-Date: 2022-10-13 11:28+0500\n"
+"PO-Revision-Date: 2022-10-21 12:48+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -401,18 +401,18 @@ msgstr "Conectores de ONLYOFFICE"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:114
 #: wp-content/themes/teamlab-blog-2-0/header.php:186
-msgid "ONLYOFFICE for desktop"
-msgstr "ONLYOFFICE para escritorio"
+msgid "For desktop"
+msgstr "Para escritorio"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:117
 #: wp-content/themes/teamlab-blog-2-0/header.php:187
-msgid "ONLYOFFICE for iOS"
-msgstr "ONLYOFFICE para iOS"
+msgid "For iOS"
+msgstr "Para iOS"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:120
 #: wp-content/themes/teamlab-blog-2-0/header.php:188
-msgid "ONLYOFFICE for Android"
-msgstr "ONLYOFFICE para Android"
+msgid "For Android"
+msgstr "Para Android"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:123
 msgid "ONLYOFFICE Groups"
@@ -1049,9 +1049,6 @@ msgstr "CARACTERÍSTICAS"
 
 #~ msgid "ONLYOFFICE joins the Linux Foundation as a silver member"
 #~ msgstr "ONLYOFFICE se ha unido a la Fundación Linux como miembro de plata"
-
-#~ msgid "follow us on:"
-#~ msgstr "Síganos en:"
 
 #~ msgid "Meet ONLYOFFICE Private Rooms where every symbol you type is encrypted <span class=\"nowrap\">end-to-end</span>"
 #~ msgstr "Descubre las Salas privadas de ONLYOFFICE, donde cada uno de los símbolos que escribes se encripta de extremo a extremo"
