--- a/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: _s 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/tags/_s\n"
 "POT-Creation-Date: 2022-04-25 15:19+0300\n"
-"PO-Revision-Date: 2022-10-13 11:29+0500\n"
+"PO-Revision-Date: 2022-10-21 12:49+0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -229,8 +229,6 @@ msgid "Waiting for Twitter... Once Twitter is ready they will display my Tweets 
 msgstr ""
 
 #: wp-content/plugins/simple-twitter-tweets/simple-twitter-tweets.php:610
-#, fuzzy
-#| msgid "Follow us"
 msgid "Follow"
 msgstr "关注我们"
 
@@ -423,8 +421,7 @@ msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1114
 msgid ""
-"Require verification of first-time subscription e-mails (this is known as \"double opt-in\" and is required by law in some "
-"countries)"
+"Require verification of first-time subscription e-mails (this is known as \"double opt-in\" and is required by law in some countries)"
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1117
@@ -445,8 +442,8 @@ msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1125
 msgid ""
-"Do a CSS \"clear\" on the subscription checkbox/message (uncheck this if the checkbox/message appears in a strange location in "
-"your theme)"
+"Do a CSS \"clear\" on the subscription checkbox/message (uncheck this if the checkbox/message appears in a strange location in your "
+"theme)"
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1128
@@ -484,8 +481,8 @@ msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1142
 msgid ""
-"These settings only matter if you are using a custom style.  <code>[theme_path]</code> will be replaced with the path to your "
-"current theme."
+"These settings only matter if you are using a custom style.  <code>[theme_path]</code> will be replaced with the path to your current "
+"theme."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1144
@@ -552,22 +549,22 @@ msgstr ""
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1328
 #, php-format
 msgid ""
-"<strong>%s</strong> has been blocked from receiving notifications.  You will have to have the administrator remove the block "
-"before you will be able to change your notification address."
+"<strong>%s</strong> has been blocked from receiving notifications.  You will have to have the administrator remove the block before "
+"you will be able to change your notification address."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1331
 #, php-format
 msgid ""
-"Your change of e-mail request was successfully received.  Please check your old account (<strong>%s</strong>) in order to confirm "
-"the change."
+"Your change of e-mail request was successfully received.  Please check your old account (<strong>%s</strong>) in order to confirm the "
+"change."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1336
 #, php-format
 msgid ""
-"Your request to block <strong>%s</strong> from receiving any further notifications has been received.  In order for you to "
-"complete the block, please check your e-mail and click on the link in the message that has been sent to you."
+"Your request to block <strong>%s</strong> from receiving any further notifications has been received.  In order for you to complete "
+"the block, please check your e-mail and click on the link in the message that has been sent to you."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1340
@@ -599,8 +596,8 @@ msgstr ""
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1380
 #, php-format
 msgid ""
-"Click the button below to remove the block on <strong>%s</strong>.  This should only be done if the user has specifically "
-"requested it."
+"Click the button below to remove the block on <strong>%s</strong>.  This should only be done if the user has specifically requested "
+"it."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1388
@@ -614,8 +611,8 @@ msgstr ""
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1397
 #, php-format
 msgid ""
-"You have indicated that you do not wish to receive any notifications at <strong>%1$s</strong> from this site. If this is "
-"incorrect, or if you wish to have the block removed, please contact the <a href=\"mailto:%2$s\">site administrator</a>."
+"You have indicated that you do not wish to receive any notifications at <strong>%1$s</strong> from this site. If this is incorrect, "
+"or if you wish to have the block removed, please contact the <a href=\"mailto:%2$s\">site administrator</a>."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1411
@@ -694,8 +691,8 @@ msgstr ""
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1575
 #, php-format
 msgid ""
-"If you would like <strong>%s</strong> to be blocked from receiving any notifications from this site, click the button below.  "
-"This should be reserved for cases where someone is signing you up for notifications without your consent."
+"If you would like <strong>%s</strong> to be blocked from receiving any notifications from this site, click the button below.  This "
+"should be reserved for cases where someone is signing you up for notifications without your consent."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1579
@@ -709,8 +706,8 @@ msgstr ""
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1592
 #, php-format
 msgid ""
-"If you would like to change the e-mail address for your subscriptions, enter the new address below.  You will be required to "
-"verify this request by clicking a special link sent to your current address (<strong>%s</strong>)."
+"If you would like to change the e-mail address for your subscriptions, enter the new address below.  You will be required to verify "
+"this request by clicking a special link sent to your current address (<strong>%s</strong>)."
 msgstr ""
 
 #: wp-content/plugins/subscribe-to-comments/subscribe-to-comments.php:1596
@@ -871,8 +868,8 @@ msgstr "帮助中心"
 msgid "App Directory"
 msgstr "应用目录"
 
-#: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:67 wp-content/themes/teamlab-blog-2-0/footer.php:166 msgid "Compare to
-#: other suites" msgstr "与其他套房比较" wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:68
+#: wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:67 wp-content/themes/teamlab-blog-2-0/footer.php:166 msgid "Compare to other
+#: suites" msgstr "与其他套房比较" wp-content/themes/teamlab-blog-2-0/ampforwp/footer.php:68
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:238 wp-content/themes/teamlab-blog-2-0/footer.php:169
 #: wp-content/themes/teamlab-blog-2-0/header.php:359
 msgid "Contribute"
@@ -997,16 +994,16 @@ msgid "ONLYOFFICE Connectors"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:114 wp-content/themes/teamlab-blog-2-0/header.php:186
-msgid "ONLYOFFICE for desktop"
-msgstr "ONLYOFFICE的桌面版"
+msgid "For desktop"
+msgstr "的桌面版"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:117 wp-content/themes/teamlab-blog-2-0/header.php:187
-msgid "ONLYOFFICE for iOS"
-msgstr "ONLYOFFICE的IOS"
+msgid "For iOS"
+msgstr "的IOS"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:120 wp-content/themes/teamlab-blog-2-0/header.php:188
-msgid "ONLYOFFICE for Android"
-msgstr "ONLYOFFICE的Android"
+msgid "For Android"
+msgstr "的Android"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:123
 msgid "ONLYOFFICE Groups"
@@ -1524,10 +1521,6 @@ msgstr "编辑<span class=\"screen-reader-text\">%s</span>"
 msgid "Recent posts"
 msgstr "最新博文"
 
-#: wp-content/themes/teamlab-blog-2-0/social-icons.php:2
-msgid "Follow us"
-msgstr "关注我们"
-
 #: wp-content/themes/teamlab-blog-2-0/template-parts/content-none.php:24
 #, php-format
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
@@ -1573,9 +1566,6 @@ msgstr "所有的博文&nbsp;<div class=\"grey-arrow\"></div>"
 
 #~ msgid "ONLYOFFICE joins the Linux Foundation as a silver member"
 #~ msgstr "ONLYOFFICE加入Linux基金会成为银牌会员"
-
-#~ msgid "follow us on:"
-#~ msgstr "关注我们："
 
 #~ msgid "Meet ONLYOFFICE Private Rooms where every symbol you type is encrypted <span class=\"nowrap\">end-to-end</span>"
 #~ msgstr "了解ONLYOFFICE私密房间，您在这里键入的每个字符都将被端到端加密"
