feat: add translations

--- a/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
@@ -766,7 +766,7 @@ msgid "Get the latest ONLYOFFICE news"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:391 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:7 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:15
-msgid "Your email"
+msgid "Your email*"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:393 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:17
@@ -863,3 +863,54 @@ msgstr ""
 #: wp-includes/widgets/class-wp-widget-recent-posts.php:95
 msgid "View all <div class=\"no-wrap\">posts&nbsp;<div class=\"grey-arrow\"></div></div>"
 msgstr ""
+
+#: wp-content/themes/teamlab-blog-2-0/searchform.php:9
+msgid "Search"
+msgstr "Vyhledávání"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:106
+msgid "Category Topics"
+msgstr "Témata kategorie"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:108
+msgid "Product releases"
+msgstr "Vydání produktu"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:112
+#: wp-content/themes/teamlab-blog-2-0/index.php:117
+msgid "For developers"
+msgstr "Pro vývojáře"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:115
+#: wp-content/themes/teamlab-blog-2-0/index.php:208
+msgid "For business"
+msgstr "Pro podniky"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:118
+#: wp-content/themes/teamlab-blog-2-0/index.php:237
+msgid "For education"
+msgstr "Pro vzdělávání"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:157
+msgid "View all posts Product releases"
+msgstr "Zobrazit všechny příspěvky Uvedení produktů"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:186
+msgid "View all posts For developers"
+msgstr "Zobrazit všechny příspěvky Pro vývojáře"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:217
+msgid "View all posts For business"
+msgstr "Zobrazit všechny příspěvky Pro firmy"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:246
+msgid "View all posts For education"
+msgstr "Zobrazit všechny příspěvky Pro vzdělávání"
+
+#: wp-content/themes/teamlab-blog-2-0/index.php:283
+msgid "View all posts"
+msgstr "Zobrazit všechny příspěvky"
+
+#: wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:34
+msgid "By clicking \"Subscribe\", you agree to the <u>rules for using the service and processing personal data.</u>"
+msgstr "Kliknutím na tlačítko \"Přihlásit se k odběru\" souhlasíte s <u>pravidly používání služby a zpracování osobních údajů.</u>"
