--- a/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
@@ -812,6 +812,14 @@ msgstr "Entdecken Sie <b>ONLYOFFICE Docs v7.2</b> mit einem Marketplace von Plug
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
 msgstr "<b>Entdecken Sie ONLYOFFICE Docs v7.2</b>"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:120
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
+msgstr "Begrüßen Sie <b>ONLYOFFICE Docs Cloud</b>, eine umfassende SaaS-Bürolösung"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:129
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
+msgstr "Begrüßen Sie <b>ONLYOFFICE Docs Cloud</b>"
+
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
