--- a/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
@@ -817,6 +817,14 @@ msgstr "Découvrez <b>ONLYOFFICE Docs v7.2</b> avec marketplace de plugins, nouv
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
 msgstr "<b>Découvrir ONLYOFFICE Docs v7.2</b>"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:120
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
+msgstr "Découvrez <b>ONLYOFFICE Docs Cloud</b>, un logiciel de bureautique complet fourni sous forme de service."
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:129
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
+msgstr "Découvrir <b>ONLYOFFICE Docs Cloud</b>"
+
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
