--- a/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/it_IT.po
@@ -809,6 +809,14 @@ msgstr "Scopri <b>ONLYOFFICE Docs v7.2</b> con marketplace di plugin, nuovi camp
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
 msgstr "<b>Scopri ONLYOFFICE Docs v7.2</b>"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:120
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
+msgstr "Scopri <b>ONLYOFFICE Docs Cloud</b>, un software per ufficio completo fornito come servizio"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:129
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
+msgstr "Scopri <b>ONLYOFFICE Docs Cloud</b>"
+
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
