--- a/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
@@ -1187,6 +1187,14 @@ msgstr ""
 msgid "<b>ONLYOFFICE Docs v7.2</b>"
 msgstr "<b>ONLYOFFICE Docs v7.2についての詳細情報</b>"
 
+#: wp-content/themes/teamlab-blog-2-0/header.php:120
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
+msgstr "サービスとして提供されている完全なオフィスソフトウェアである<b>ONLYOFFICE Docs Cloud</b>をご紹介します"
+
+#: wp-content/themes/teamlab-blog-2-0/header.php:129
+msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
+msgstr "<b>ONLYOFFICE Docs Cloud</b>をご紹介します"
+
 #: wp-content/themes/teamlab-blog-2-0/header.php:152 wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
 msgstr "ニュース、ヒント、使い方を検索"
